k8s/cicd/admin/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: microservices
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: 70131370/admin:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
          - name: http-port
            containerPort: 8080
