k8s/cicd/admin/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: admin-ip
    cert-manager.io/cluster-issuer: microservices-letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  - host: admin.michibaum.ch
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: admin-svc
  tls:
  - hosts:
    - admin.michibaum.ch
    secretName: admin.michibaum.ch
